[Soup] Cannot override default max-conns and max-conns-per-host Soup Session settings https://bugs.webkit.org/show_bug.cgi?id=64355 Default max-conns and max-conns-per-host are set at "first contact" with a site instead of at creation time.  This results in values being overwritten if they are set prior to said "first contact"; which is the most likely (or only) scenario.

Patch by Marco Peereboom <marco@peereboom.us> on 2011-07-28
Reviewed by Martin Robinson.

No new tests.  Rigged libsoup and xxxterm web browser to diagnose the
issue and validate the patch.

* platform/graphics/FontFallbackList.cpp:
(WebCore::FontFallbackList::determinePitch):

Canonical link: https://commits.webkit.org/81113@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91954 268f45cc-cd09-0410-ab3c-d52691b4dbfc